Bug de overflow en contenido de Layout corregido

--- a/src/styles/layouts/productsLayout.module.css
+++ b/src/styles/layouts/productsLayout.module.css
@@ -63,7 +63,7 @@
 
     .layoutContentContainer {
         max-height: initial;
-        overflow-y: auto;
+        overflow-y: initial;
     }
 
     .burgerMenu {
